back_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-project-backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: harishreddy1234/backend:148
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 8000
