db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: my-project-db-deployment
    labels:
          app: db
spec: 
  replicas: 2
  selector:
    matchLabels:  
      app: db
  template:
       metadata:
         labels:
           app: db
       spec:
         containers:
             - name: db
               image: harishreddy1234/db:v1.1
               ports:
                 - containerPort: 80
                 - containerPort: 443
                 - containerPort: 5432
               volumeMounts:
                 - name: pgdata
                   mountPath: "/var/lib/postgresql/data" 
       volumes: 
         - name: pgdata
           emptyDir: {}
