front_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-project-frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: harishreddy1234/frontend:145
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 3000
          # env:
          #   - name: REACT_APP_API_BASE_URL
          #     value: "http://13.232.65.18:30002"
