back_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        service: ClusterIP
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: backendports
      port: 8000
      targetPort: 8000
