back_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport
  labels:
    service: backend_NodePort
spec:
   type: NodePort
   selector:
     app: backend
   ports:
     - name: backendports
       port: 8000
       targetPort: 8000
       nodePort: 30002
