front_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: front-clusterip
    labels:
        service: front_clusterip
spec:
   type: ClusterIP
   selector:
        app: frontend
   ports:
      - name: http
        port: 80
        targetPort: 80
