headless_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db              # ✅ Required name for access database. backend will catch the db{HOST=db} on the basis of svc name
  labels:
    service: headless_for_db
spec:
  type: ClusterIP
  clusterIP: None                        # ✅ Makes it headless
  selector:
    app: db                              # ❗ Don't use matchLabels under selector in Service
  ports:
    - name: dbports
      port: 5432
      targetPort: 5432
