backendingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-api-ingress
  namespace: project
  annotations:
    argocd.argoproj.io/tracking-id: my-app:networking.k8s.io/Ingress:project/my-app-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.com
    http:
      paths:
      # Simple, bulletproof, used by Netflix/Shopify/everyone
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-clusterip
            port:
              number: 8000
