frontendingress.yaml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-frontend-ingress
  namespace: project
  annotations:
    argocd.argoproj.io/tracking-id: my-app-frontend:networking.k8s.io/Ingress:project/frontend
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-clusterip
              port:
                number: 80
