ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: project
spec:
  ingressClassName: nginx
  rules:
  - host: myapp
    http:
      paths:
      # 1. API traffic goes to backend (MUST BE FIRST)
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-clusterip
            port:
              number: 8000
      # 2. Everything else goes to frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-clusterip
            port:
              number: 80
